--- a/src/scss/layout/_products.scss
+++ b/src/scss/layout/_products.scss
@@ -1,5 +1,4 @@
 .products {
-
     &__wrap {
         display: flex;
         flex-wrap: wrap;
@@ -33,7 +32,11 @@
             display: none;
             width: 100%;
             height: 100%;
-            box-shadow: 0 20px 30px rgb(0 0 0 / 25%);
+            box-shadow: 0 20px 30px rgba(0, 0, 0, 0.25);
+
+            @include xs-block() {
+                box-shadow: 0 20px 30px transparent;
+            }
         }
 
         &:hover {
@@ -46,10 +49,18 @@
 
             .products-item__img {
                 border-color: transparent;
+
+                @include xs-block() {
+                    border: 1px solid #aeaeae;
+                }
             }
 
             .products-item__more {
                 display: block;
+
+                @include xs-block() {
+                    display: none;
+                }
             }
         }
 
@@ -69,18 +80,15 @@
             height: 32px;
             color: #fff;
 
-            &.on {
-
-                svg {
-                    stroke: transparent;
-                    fill: $color-accent;
-                }
+            &.on svg {
+                stroke: transparent;
+                fill: $color-accent;
             }
 
             svg {
                 width: inherit;
                 height: inherit;
-                stroke: rgb(0 0 0 / 10%);
+                stroke: rgba(0, 0, 0, 0.1);
                 fill: white;
             }
         }
@@ -132,7 +140,11 @@
             width: 100%;
             padding: 0 10px 10px;
             background-color: #fff;
-            box-shadow: 0 35px 30px rgb(0 0 0 / 40%);
+            box-shadow: 0 35px 30px rgba(0, 0, 0, 0.4);
+
+            @include xs-block() {
+                display: none;
+            }
         }
 
         &__btn {
