--- a/src/scss/pages/_catalog.scss
+++ b/src/scss/pages/_catalog.scss
@@ -86,9 +86,31 @@
         }
     }
 
+    &__changer {
+        margin-bottom: 30px;
+
+        @include xs-block() {
+            margin-bottom: 10px;
+        }
+    }
+
     &-filter {
         width: 250px;
         margin-right: 30px;
+
+        @include xs-block() {
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1001;
+            width: 100%;
+            height: 100%;
+            margin-right: 0;
+            transform: translateX(-1000%);
+            transition: transform 0.35s cubic-bezier(0.38, 0.22, 0.21, 0.95);
+            background-color: #fff;
+            will-change: transform;
+        }
 
         &__in {
             margin-top: 30px;
@@ -98,6 +120,10 @@
         &__cloth {
             padding-top: 30px;
             border-top: 1px dashed #aeaeae;
+
+            @include xs-block() {
+                display: none;
+            }
         }
 
         &__header {
@@ -106,13 +132,14 @@
             left: 0;
             display: flex;
             align-items: center;
+            justify-content: space-between;
             width: 100%;
             padding: 3.5px 10px;
             border-bottom: 1px solid #e1e1e1;
         }
 
         &__title {
-            font-family: $f-bold;
+            font-family: $f-medium;
             font-size: 18px;
         }
 
@@ -122,6 +149,10 @@
             font-size: 12px;
             letter-spacing: 0.5px;
             text-transform: uppercase;
+
+            @include xs-block() {
+                padding: 15px 10px;
+            }
 
             &::before,
             &::after {
@@ -148,9 +179,20 @@
                 height: 1px;
             }
 
-            &.open::before {
+            &.is-open::before {
                 margin-top: -5px;
                 transform: rotate(90deg);
+            }
+        }
+
+        &__body {
+            @include xs-block() {
+                position: absolute;
+                top: 48px;
+                bottom: 40px;
+                width: 100%;
+                overflow-y: auto;
+                -webkit-overflow-scrolling: touch;
             }
         }
 
@@ -158,6 +200,14 @@
             margin-bottom: 20px;
             border: 1px solid #aeaeae;
             background-color: #fff;
+
+            @include xs-block() {
+                margin-bottom: 0;
+                border-top: 0;
+                border-right: 0;
+                border-left: 0;
+                border-color: #e1e1e1;
+            }
 
             &_scroll {
                 max-height: 275px;
@@ -167,11 +217,21 @@
 
         &__content {
             border-top: 1px solid #aeaeae;
+
+            @include xs-block() {
+                padding: 10px 10px 15px;
+                border-top: 0;
+            }
         }
 
         &__subitem {
             display: flex;
             align-items: center;
+
+            @include xs-block() {
+                // display: inline-block;
+                margin-bottom: 15px;
+            }
 
             & + & {
                 border-top: 1px solid $color-border--light;
@@ -209,8 +269,189 @@
             border: 1px solid #e1e1e1;
             border-radius: 50%;
         }
+
+        &__btn {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 40px;
+            border: 0;
+            border-top-width: 0;
+            border-top-style: none;
+            outline: none;
+            font-family: $f;
+            font-size: 15px;
+            letter-spacing: 0.5px;
+            line-height: 39px;
+            text-align: center;
+            text-transform: uppercase;
+
+            @include xs-block() {
+                display: block;
+            }
+
+            &.button--transparent {
+                display: none;
+                margin-bottom: 20px;
+                border: 1px solid #aeaeae;
+                border-radius: 2px;
+                text-transform: none;
+
+                @include xs-block() {
+                    display: block;
+                }
+            }
+
+            &--close {
+                border-top: 1px solid #e1e1e1;
+            }
+
+            &--aply {
+                background-color: #95d6c9;
+                color: #fff;
+            }
+        }
+
+        &__footer {
+            display: none;
+
+            @include xs-block() {
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                display: flex;
+                align-items: center;
+                width: 100%;
+            }
+        }
+
+        &.is-visible {
+            transform: translateX(0);
+        }
     }
 } // .catalog
+
+.changer {
+    display: flex;
+    justify-content: space-between;
+
+    &__title {
+        display: inline-block;
+        padding-top: 3px;
+        font-family: $f-bold;
+        font-size: 14px;
+        letter-spacing: 0.28px;
+        text-transform: uppercase;
+
+        @include xs-block() {
+            display: none;
+        }
+    } // .changer__title
+
+    &__list {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        width: 100%;
+
+        @include sm-block() {
+            flex-wrap: wrap;
+            align-items: flex-start;
+            justify-content: flex-start;
+        }
+    } // .changer__list
+
+    &__item {
+        position: relative;
+        margin-bottom: 10px;
+        margin-left: 15px;
+        border: 1px solid $color-border;
+        border-radius: $border-radius * 2;
+
+        &:hover {
+            border-color: #808080;
+        }
+
+        &.is-checked {
+            border: 0;
+            background-color: #565656;
+
+            .changer {
+                &__link {
+                    color: #fff;
+                    font-family: $f;
+                }
+
+                &__reset {
+                    display: block;
+                }
+
+                &__counter {
+                    color: #fff;
+                }
+            }
+        } // .changer__item.is-checked
+    } // .changer__item
+
+    &__link {
+        display: flex;
+        align-items: center;
+        padding: 3px 10px 4px;
+        transition: initial;
+        font-family: $f-bold;
+        font-size: 14px;
+        cursor: pointer;
+
+        &:hover {
+            color: initial;
+        }
+    } // .changer__link
+
+    &__reset {
+        display: none;
+        height: 20px;
+        margin-right: -10px;
+        margin-left: 9px;
+        padding: 0 10px;
+        border-left: 1px solid rgba(255, 255, 255, 0.5);
+        cursor: pointer;
+
+        span {
+            position: relative;
+            display: flex;
+            width: 12px;
+            height: 19px;
+
+            &::before,
+            &::after {
+                content: '';
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                width: 12px;
+                height: 1px;
+                transform: translate(-50%, -50%);
+                background-color: #fff;
+            }
+
+            &::before {
+                transform: translate(-50%, -50%) rotate(45deg);
+            }
+
+            &::after {
+                transform: translate(-50%, -50%) rotate(-45deg);
+            }
+        }
+    } // .changer__reset
+
+    &__counter {
+        margin-top: 1px;
+        margin-left: 5px;
+        color: gray;
+        font-size: 13px;
+    } // .changer__counter
+} // .changer
 
 .sorting {
     margin-left: auto;
